--- a/css/styles.css
+++ b/css/styles.css
@@ -90,8 +90,27 @@ footer {
 }
 
 /* Box styling */
-.loanBox, .affordBox {
-    background-color: #4682B4; /* Steel Blue */
+.loanBox {
+    background-image: url("/images/carLoanImage.png");
+    background-size: cover; /* Ensures the image covers the container */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents image repetition */
+    color: white;
+    width: 500px;
+    height: 500px;
+    display: flex;
+    justify-content: center; /* Centers items horizontally */
+    align-items: flex-end; /* Aligns items to the bottom of the container */
+    border-radius: 8px;
+    font-size: 1.5em;
+    position: relative; /* Allows for positioning of the image inside */
+    overflow: hidden; /* Ensures that overflowing content is hidden */
+}
+.affordBox {
+    background-image: url("/images/affordImage.png");
+    background-size: cover; /* Ensures the image covers the container */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents image repetition */
     color: white;
     width: 500px;
     height: 500px;
@@ -108,4 +127,9 @@ footer {
     max-width: 100%; /* Ensures the image scales down if too large */
     height: auto; /* Maintains aspect ratio */
     display: block; /* Removes default inline spacing */
+}
+
+.aboutSection{
+    justify-content: center;
+    align-items: center;
 }
