Adjust Loan Text Image Size

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,12 @@ footer {
     overflow: hidden; /* Ensures that overflowing content is hidden */
 }
 
-.carLoanImg, .affordImg {
+.carLoanImg {
+    max-width: 100%; /* Ensures the image scales down if too large */
+    height: 12%; /* Maintains aspect ratio */
+    display: block; /* Removes default inline spacing */
+}
+.affordImg {
     max-width: 100%; /* Ensures the image scales down if too large */
     height: auto; /* Maintains aspect ratio */
     display: block; /* Removes default inline spacing */
