--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 
 /* Main Content Area */
 main {
-    background-color: #F5F5F5; /* White Smoke */
+    background-color: #607D8B; /* White Smoke */
     padding: 20px;
     margin: 20px;
     border-radius: 8px;
@@ -108,7 +108,7 @@ footer {
 }
 .affordBox {
     background-image: url("/images/affordImage.png");
-    background-size: cover; /* Ensures the image covers the container */
+    background-size: 900px; /* Ensures the image covers the container */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents image repetition */
     color: white;
