--- a/css/styles.css
+++ b/css/styles.css
@@ -139,9 +139,10 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
 .header-logo {
     max-height: 100px; /* Adjust the height as needed */
     width: auto; /* Maintain aspect ratio */
-    display: block;
-    margin: 0 auto; /* Center the logo */
+    float: right; /* Align the logo to the right */
+    margin: 0; /* Remove any margin to prevent unwanted spacing */
 }
