--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,11 @@ body {
 }
 
 /* Main Content Area */
-main {
+.mainContent {
     background-color: #F5F5F5; /* White Smoke */
     padding-top: 20px;
     border-radius: 8px;
+    flex-grow: 1;
 }
 
 /* Headings */
