color change fix

--- a/carLoan/css/styles.css
+++ b/carLoan/css/styles.css
@@ -20,7 +20,7 @@ body {
 /* Header Styling */
 .header {
     width: 100%;
-    background-color: #F5F5F5; /* White Smoke background */
+    background-color: #cef2f7; /* White Smoke background */
     padding: 10px 0;
     display: flex;
     justify-content: center;
