--- a/afford/css/styles.css
+++ b/afford/css/styles.css
@@ -4,49 +4,44 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('images/homepageBackground.gif'); /* Background image */
+    background-image: url('../images/homepageBackground.gif'); /* Background image */
     background-size: cover; /* Cover the entire page */
     background-position: center; /* Center the background */
     background-repeat: no-repeat; /* No repeating */
     background-attachment: fixed; /* Keeps the background fixed during scroll */
 }
+
 .header-logo {
     max-height: 100px; /* Adjust the height as needed */
     width: auto; /* Maintain aspect ratio */
     display: block;
     margin: 0 auto; /* Center the logo */
 }
+
 header {
     background: #E0F7FA;
 }
+
 h1 {
     font-size: 1.8em;
     margin-bottom: 20px;
     text-align: center;
     color: #607D8B; /* Slate Gray */
 }
-.mainContent {
-    background-color: rgba(245, 245, 245, 0.9); /* White Smoke with transparency */
-    padding: 20px; /* Add padding for spacing */
-    box-sizing: border-box; /* Ensure padding doesn’t add to element width */
-    margin: 0 auto; /* Center the content */
-    width: 100%; /* Make main content take full width */
-    /*max-width: 1200px; /* Optional: Limit the width for readability on large screens */
-    min-height: calc(100vh - 60px); /* Make main content fill the screen, accounting for header and footer */
-    background-image: url("/images/homepageBackground.gif");
-    background-size: cover;
+
+#mainContent {
     display: flex;
-    justify-content: center; /* Centers the child horizontally */
-    align-items: center; /* Centers the child vertically */
+    justify-content: center; /* Center the form box horizontally */
+    align-items: center; /* Center the form box vertically */
+    min-height: calc(100vh - 120px); /* Adjust height considering header and footer */
 }
 
-/* Container for Loan Boxes */
-.container {
+#container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 100px; /* Increased space between the boxes */
+    width: 100%;
 }
+
 #car-affordability-form {
     background-color: #F5F5F5; /* White Smoke background */
     padding: 20px;
@@ -56,7 +51,7 @@ h1 {
     max-width: 400px;
     width: 100%;
     box-sizing: border-box;
-    margin-top: 20px;
+    margin-bottom: 20px; /* Add margin to prevent overlap with footer */
 }
 
 label {
@@ -72,6 +67,11 @@ input[type="number"], input[type="range"] {
     border: 1px solid #DCDCDC; /* Light Gray border */
     border-radius: 4px;
     box-sizing: border-box;
+}
+
+input[type="range"] {
+    width: calc(100% - 20px);
+    margin-top: 10px;
 }
 
 button[type="submit"] {
@@ -99,6 +99,7 @@ button[type="submit"]:hover {
     color: #607D8B; /* Slate Gray */
     font-weight: bold;
 }
+
 footer {
     background-color: #607D8B; /* Slate Gray */
     color: white;
