--- a/afford/css/styles.css
+++ b/afford/css/styles.css
@@ -59,6 +59,7 @@ label {
     display: block;
     margin-bottom: 10px;
     color: #607D8B; /* Slate Gray */
+    text-align: center; /* Center text alignment */
 }
 
 #percentage-container {
