--- a/afford/css/styles.css
+++ b/afford/css/styles.css
@@ -118,12 +118,16 @@ header {
 }
 
 /* Result Styling */
-#result {
+.result-box {
     margin-top: 20px;
     background-color: #E0F7FA; /* Soft Blue */
     padding: 15px;
     border-radius: 8px;
     text-align: center;
+}
+
+.result-box p {
+    margin: 0;
     color: #607D8B; /* Slate Gray */
     font-weight: bold;
 }
